--- a/app.yaml
+++ b/app.yaml
@@ -14,9 +14,9 @@ runtime: nodejs12
 handlers:
   - url: /static
     static_dir: build/static
-  - url: /(.*\.(json|ico|js))$
+  - url: /(.*\.(json|ico|js|png))$
     static_files: build/\1
-    upload: build/.*\.(json|ico|js)$
+    upload: build/.*\.(json|ico|js|png)$
   - url: .*
     static_files: build/index.html
     upload: build/index.html
