--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^16.9.10",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.3",
@@ -45,6 +47,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.6.2",
+    "@types/react-hamburger-menu": "0.0.3",
     "@types/react-router-dom": "^5.1.6"
   }
 }
