--- a/package.json
+++ b/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^12.19.11",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
-    "node-sass": "^4.14.1",
-    "react": "^17.0.1",
-    "react-burger-menu": "^3.0.3",
-    "react-dom": "^17.0.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.4.3",
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-burger-menu": "^3.0.6",
+    "react-dom": "^17.0.2",
     "react-hamburger-menu": "^1.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
-    "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "typescript": "^4.3.5",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "BROWSER='google chrome' react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -48,8 +48,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-burger-menu": "^2.6.2",
-    "@types/react-hamburger-menu": "0.0.3",
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-burger-menu": "^2.8.1",
+    "@types/react-hamburger-menu": "0.0.4",
+    "@types/react-router-dom": "^5.1.8"
   }
 }
