Add remaining stuff

--- a/app.yaml
+++ b/app.yaml
@@ -1,15 +1,15 @@
 runtime: nodejs12
 
-#env_variables:
-#  # Replace the variables
-#  FIREBASE_APIKEY: <FIREBASE_APIKEY>
-#  FIREBASE_AUTHDOMAIN: <FIREBASE_AUTHDOMAIN>
-#  FIREBASE_DATABASEURL: <FIREBASE_DATABASEURL>
-#  FIREBASE_PROJECTID: <FIREBASE_PROJECTID>
-#  FIREBASE_STORAGEBUCKET: <FIREBASE_STORAGEBUCKET>
-#  FIREBASE_MESSAGINGSENDERID: <FIREBASE_MESSAGINGSENDERID>
-#  FIREBASE_APPID: <FIREBASE_APPID>
-#  FIREBASE_MEASUREMENTID: <FIREBASE_MEASUREMENTID>
+env_variables:
+ # Replace the variables
+ FIREBASE_APIKEY: "AIzaSyCtQmDp3BshTYh28MH2Bj1WNFT0ox0qNLw"
+ FIREBASE_AUTHDOMAIN: "nakulchawla.firebaseapp.com"
+ FIREBASE_DATABASEURL: <FIREBASE_DATABASEURL>
+ FIREBASE_PROJECTID: "nakulchawla"
+ FIREBASE_STORAGEBUCKET: "nakulchawla.appspot.com"
+ FIREBASE_MESSAGINGSENDERID: "245180881293"
+ FIREBASE_APPID: "1:245180881293:web:236c38a7450efd870cc5c4"
+ FIREBASE_MEASUREMENTID: "G-GNTYF2CK0F"
 
 handlers:
   - url: /static
